--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,34 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/cmlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/cmlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ActionBar"
         android:usesCleartextTraffic="true">
+
+        <activity android:name=".activities.ui.UpdateForm"></activity>
+        <activity android:name=".activities.ui.ShowForm" />
+        <activity
+            android:name=".activities.ui.FormContract"
+            android:theme="@style/AppTheme.ActionBar.NoActionBar" />
+        <activity
+            android:name=".activities.ui.DetailTemp"
+            android:theme="@style/AppTheme.ActionBar.NoActionBar" />
         <activity
             android:name=".activities.Login"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme.ActionBar.NoActionBar"></activity>
+            android:theme="@style/AppTheme.ActionBar.NoActionBar" />
         <activity android:name=".activities.Profile" />
         <activity
             android:name=".activities.Registor"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.MainActivity" />
-
         <activity
             android:name=".activities.Navigation"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
