--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".activities.Navigation"
             android:theme="@style/AppTheme" />
+        <activity android:name=".activities.ui.WelcomeActivity"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme">
